# in-memory-db

./: .gitignore  CMakeLists.txt  Readme.md  base_implementation.cpp  main.cpp
base_implementation/: collection.cpp  collection.h  record.h
strategies/: base.cpp  base.h  compare_fun.cpp  compare_fun.h  soa_layout.cpp  soa_layout.h  soa_layout_generic.cpp  soa_layout_generic.h  strategy.h
test/: seeder.cpp  seeder.h
types/: collection.cpp  collection.h  collection_generic.cpp  collection_generic.h  record.h
